--- a/Gun01/index3.html
+++ b/Gun01/index3.html
@@ -16,6 +16,9 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum modi non animi magni nobis rem officia
         necessitatibus. Quod nulla est hic, aperiam ea sunt quos deleniti corrupti quibusdam provident eveniet?</p>
     <img src="sahil.jpg" width="200" height="100" alt="Manzara" title="Ben sahilde yürüyorum.">
+    <br>
+    <a href="https://google.com" target="_blank">Arama Motoru</a>
+    <!--target blank hazır sekmeyi kapatmadan yeni sekmeyi açar-->
 </body>
 
 </html>
