--- a/Gun05/detaylar.html
+++ b/Gun05/detaylar.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>device-width deneme</title>
+  <title>diğer şeyler</title>
 </head>
 
 <body>
@@ -16,6 +16,28 @@
   <p>Cupiditate quaerat molestiae corrupti unde nesciunt, necessitatibus sed iure quasi dolorum voluptatibus voluptas
     quis hic saepe repellat nisi eligendi excepturi quidem! Velit at temporibus fugiat voluptate maxime ducimus illum
     dicta.</p>
+
+  <form action="gonder.html">
+
+    <label>Askerlik yaptınız mı</label>
+    <input type="radio" name="askerlik" id="">Evet
+    <input type="radio" name="askerlik" id="">Hayır
+    <!-- nameleri aynı yapma sebebimiz tek birini seçilebilir kılmak. checkboxta nameleri aynı value farklı-->
+  </form>
+
+  <input type="checkbox" name="hobi" value="yuzme"> yüzme
+  <input type="checkbox" name="hobi" value="tenis"> tenis
+
+  <p>
+    <label for="sehir">doğduğunuz yer</label>
+
+  </p>
+
+
+  <iframe src="https://haber.com" frameborder="2" width="400" height="300"></iframe>
+  <!-- bir siteyi sayfa içinde gösterme -->
+
+
 </body>
 
 </html>
