--- a/Gun07/renk.html
+++ b/Gun07/renk.html
@@ -11,8 +11,10 @@
       display: flex;
       /* esnek görüntü df tab */
       justify-content: center;
+      /* yatay ortalar */
       /* jcc ortalama */
       align-items: center;
+      /* dikey ortalar */
       /* aic */
     }
 
