--- a/Gun17/degiskenler.html
+++ b/Gun17/degiskenler.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Değişkenler (JS)</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      font-size: 4em;
+    }
+  </style>
 </head>
 
 <body>
