dizi ve döngüler

--- a/homeworktemplate/template.html
+++ b/homeworktemplate/template.html
@@ -45,6 +45,23 @@
       color: white;
       padding: 2px;
     }
+
+    .left-col>.title-heading {
+      display: block;
+      border: 1px solid;
+      margin-top: 10px;
+      line-height: 36px;
+      padding: 10px;
+
+    }
+
+    .left-col>.blog-entry {
+      display: block;
+      border: 1px solid;
+      margin-top: 2.5rem;
+      padding: 10px;
+
+    }
   </style>
 </head>
 
@@ -56,10 +73,11 @@
     </div>
   </header>
   <main>
-    <div class="left-col" style="max-width: 1400px;">
+    <div class="left-col">
       <div class="title-heading">
+        <img src="/w3images/woods.jpg" alt="Nature" style="width:100%" class="img1">
         <h2>TİTLE HEADİNG</h2>
-        <h3>Title Description</h3>
+        <p>Title Description <span>April 7,2014</span></p>
         <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod
           placerat.
           Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam
@@ -69,7 +87,7 @@
       </div>
       <div class="blog-entry">
         <h2>BLOG ENTRY</h2>
-        <h3>Title Description</h3>
+        <p>Title Description <span>April 2,2014</span></p>
         <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod
           placerat.
           Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam
